data/derived/sp14/progs/unify/prog1770.ml.out
Characters 120-150:
  | 2 -> buildTimes(build (rand, depth-(depth -2)), build(rand, depth-(depth -2)));;
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
